.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Org_Component__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__API_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retrieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Changed On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Old_Attachment_ID__c</fullName>
        <label>Old Attachment IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__OrganisationName__c</fullName>
        <label>Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Latest Components</relationshipLabel>
        <relationshipName>Org_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Changed Component</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Changed Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Changed Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>